--- a/vacuum-pumps.ioc
+++ b/vacuum-pumps.ioc
@@ -1,14 +1,18 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
-FREERTOS.IPParameters=Tasks01
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,FootprintOK
+FREERTOS.Tasks01=heartBeatTask,24,128,StartHeartBeatTask,Default,NULL,Dynamic,NULL,NULL;ioTask,8,128,StartIOTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.IPParameters=OwnAddress
+I2C1.IPParametersWithoutCheck=OwnAddress
+I2C1.OwnAddress=i2cSlaveAddress
 KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=ADC1
@@ -20,45 +24,49 @@ Mcu.IP5=SYS
 Mcu.IPNb=6
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PD0-OSC_IN
-Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PB0
-Mcu.Pin11=PB1
-Mcu.Pin12=PB2
-Mcu.Pin13=PB10
-Mcu.Pin14=PB11
-Mcu.Pin15=PB12
-Mcu.Pin16=PB13
-Mcu.Pin17=PB14
-Mcu.Pin18=PB15
-Mcu.Pin19=PA8
-Mcu.Pin2=PA0-WKUP
-Mcu.Pin20=PA9
-Mcu.Pin21=PA10
-Mcu.Pin22=PA11
-Mcu.Pin23=PA12
-Mcu.Pin24=PA13
-Mcu.Pin25=PA14
-Mcu.Pin26=PB3
-Mcu.Pin27=PB4
-Mcu.Pin28=PB5
-Mcu.Pin29=PB6
-Mcu.Pin3=PA1
-Mcu.Pin30=PB7
-Mcu.Pin31=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin32=VP_SYS_VS_tim1
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA4
-Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
-Mcu.PinsNb=33
+Mcu.Pin0=PC13-TAMPER-RTC
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PA6
+Mcu.Pin11=PA7
+Mcu.Pin12=PB0
+Mcu.Pin13=PB1
+Mcu.Pin14=PB2
+Mcu.Pin15=PB10
+Mcu.Pin16=PB11
+Mcu.Pin17=PB12
+Mcu.Pin18=PB13
+Mcu.Pin19=PB14
+Mcu.Pin2=PD0-OSC_IN
+Mcu.Pin20=PB15
+Mcu.Pin21=PA8
+Mcu.Pin22=PA9
+Mcu.Pin23=PA10
+Mcu.Pin24=PA11
+Mcu.Pin25=PA12
+Mcu.Pin26=PA13
+Mcu.Pin27=PA14
+Mcu.Pin28=PB3
+Mcu.Pin29=PB4
+Mcu.Pin3=PD1-OSC_OUT
+Mcu.Pin30=PB5
+Mcu.Pin31=PB6
+Mcu.Pin32=PB7
+Mcu.Pin33=PB8
+Mcu.Pin34=PB9
+Mcu.Pin35=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin36=VP_SYS_VS_tim1
+Mcu.Pin4=PA0-WKUP
+Mcu.Pin5=PA1
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA4
+Mcu.Pin9=PA5
+Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
-Mcu.UserConstants=
+Mcu.UserConstants=I2C_SLAVE_ADDRESS_BASE,0x26
 Mcu.UserName=STM32F103C8Tx
-MxCube.Version=6.2.0
-MxDb.Version=DB.6.0.20
+MxCube.Version=6.2.1
+MxDb.Version=DB.6.0.21
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -87,11 +95,11 @@ PA1.GPIO_Label=VAC_2
 PA1.Locked=true
 PA1.Signal=ADCx_IN1
 PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=PRES_2
+PA10.GPIO_Label=PRES_3
 PA10.Locked=true
 PA10.Signal=GPIO_Output
 PA11.GPIOParameters=GPIO_Label
-PA11.GPIO_Label=PRES_1
+PA11.GPIO_Label=PRES_4
 PA11.Locked=true
 PA11.Signal=GPIO_Output
 PA12.GPIOParameters=GPIO_Label
@@ -111,63 +119,63 @@ PA3.GPIO_Label=VAC_4
 PA3.Locked=true
 PA3.Signal=ADCx_IN3
 PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=STBY_1
+PA4.GPIO_Label=EV_1
 PA4.Locked=true
 PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=PUMP_1
+PA5.GPIO_Label=STBY_1
 PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=EV_1
+PA6.GPIO_Label=PUMP_1
 PA6.Locked=true
 PA6.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=STBY_2
+PA7.GPIO_Label=EV_2
 PA7.Locked=true
 PA7.Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=PRES_4
+PA8.GPIO_Label=PRES_1
 PA8.Locked=true
 PA8.Signal=GPIO_Output
 PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=PRES_3
+PA9.GPIO_Label=PRES_2
 PA9.Locked=true
 PA9.Signal=GPIO_Output
 PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=PUMP_2
+PB0.GPIO_Label=STBY_2
 PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=EV_2
+PB1.GPIO_Label=PUMP_2
 PB1.Locked=true
 PB1.Signal=GPIO_Output
 PB10.GPIOParameters=GPIO_Label
-PB10.GPIO_Label=STBY_3
+PB10.GPIO_Label=EV_3
 PB10.Locked=true
 PB10.Signal=GPIO_Output
 PB11.GPIOParameters=GPIO_Label
-PB11.GPIO_Label=PUMP_3
+PB11.GPIO_Label=STBY_3
 PB11.Locked=true
 PB11.Signal=GPIO_Output
 PB12.GPIOParameters=GPIO_Label
-PB12.GPIO_Label=EV_3
+PB12.GPIO_Label=PUMP_3
 PB12.Locked=true
 PB12.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_Label
-PB13.GPIO_Label=STBY_4
+PB13.GPIO_Label=EV_4
 PB13.Locked=true
 PB13.Signal=GPIO_Output
 PB14.GPIOParameters=GPIO_Label
-PB14.GPIO_Label=PUMP_4
+PB14.GPIO_Label=STBY_4
 PB14.Locked=true
 PB14.Signal=GPIO_Output
 PB15.GPIOParameters=GPIO_Label
-PB15.GPIO_Label=EV_4
+PB15.GPIO_Label=PUMP_4
 PB15.Locked=true
 PB15.Signal=GPIO_Output
 PB2.GPIOParameters=GPIO_Label
-PB2.GPIO_Label=BOOT_1
+PB2.GPIO_Label=B1_TEST
 PB2.Locked=true
 PB2.Signal=GPIO_Input
 PB3.Mode=Trace_Asynchronous_SW
@@ -184,6 +192,22 @@ PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=TOR_1
+PB8.Locked=true
+PB8.Signal=GPIO_Input
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=TOR_2
+PB9.Locked=true
+PB9.Signal=GPIO_Input
+PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
+PC13-TAMPER-RTC.GPIO_Label=TOR_3
+PC13-TAMPER-RTC.Locked=true
+PC13-TAMPER-RTC.Signal=GPIO_Input
+PC14-OSC32_IN.GPIOParameters=GPIO_Label
+PC14-OSC32_IN.GPIO_Label=TOR_4
+PC14-OSC32_IN.Locked=true
+PC14-OSC32_IN.Signal=GPIO_Input
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 PD0-OSC_IN.Signal=RCC_OSC_IN
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
