Initialisation lecture vacuostat, commande I2C, gestion logs, etc...
# Liste des mots clés de titre de commit (version courte -> résultat long)
# r <num> -> Récupération du Redmine (Redmine #<num> : <titre_du_redmine>)
# t <titre> -> Technique : <titre>
# f <titre> -> Fix : <titre>
# ty <titre> -> Typo : <titre>
# d <titre> -> Doc : <titre>
# s <titre> -> Sécurité : <titre>
# u <titre> -> UI : <titre>
# c <titre> -> CI : <titre>
# WIP <desc>
# [skip ci] en début de titre de commit permet de ne pas déclencher de build
#
# Chaque ligne de description ajouté sera préfixé automatiquement d'une puce.
#
# Pour la saisie de temps automatique lors de l'écriture d'un commit le format est le suivant :
# /spend <options>
#
# NB : Plusieurs /spend peuvent être défini sur un même commit
#
# Les options sont :
# - Temps en heure (ie 0.25). Obligatoire
# - Numéro de redmine. Facultatif si le commit porte sur un redmine avec la syntaxe courte ou longue.
# - Catégorie de l'imputation. Facultatif. Récupération par les premières lettres en format court, si non défini Développement sera utilisé
# - Date de l'imputation au format ISO8601 (ie 2021-02-23)
#
# NB : L'imputation n'est pas bloquante pour le message de commit si une erreur survient.

--- a/vacuum-pumps.ioc
+++ b/vacuum-pumps.ioc
@@ -181,11 +181,11 @@ PB2.Signal=GPIO_Input
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-TRACESWO
 PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=ADD_2
+PB4.GPIO_Label=I2C_ADD_2
 PB4.Locked=true
 PB4.Signal=GPIO_Input
 PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=ADD_1
+PB5.GPIO_Label=I2C_ADD_1
 PB5.Locked=true
 PB5.Signal=GPIO_Input
 PB6.Mode=I2C
