--- a/vacuum-pumps.ioc
+++ b/vacuum-pumps.ioc
@@ -7,7 +7,7 @@ ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=heartBeatTask,24,128,StartHeartBeatTask,Default,NULL,Dynamic,NULL,NULL;ioTask,8,128,StartIOTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=heartBeatTask,24,128,StartHeartBeatTask,Default,NULL,Dynamic,NULL,NULL;readPumpTask,8,128,StartReadPumpTask,Default,NULL,Dynamic,NULL,NULL;writePumpTask,8,128,StartWritePumpTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=OwnAddress
@@ -95,11 +95,11 @@ PA1.GPIO_Label=VAC_2
 PA1.Locked=true
 PA1.Signal=ADCx_IN1
 PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=PRES_3
+PA10.GPIO_Label=PRES_2
 PA10.Locked=true
 PA10.Signal=GPIO_Output
 PA11.GPIOParameters=GPIO_Label
-PA11.GPIO_Label=PRES_4
+PA11.GPIO_Label=PRES_1
 PA11.Locked=true
 PA11.Signal=GPIO_Output
 PA12.GPIOParameters=GPIO_Label
@@ -135,11 +135,11 @@ PA7.GPIO_Label=EV_2
 PA7.Locked=true
 PA7.Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=PRES_1
+PA8.GPIO_Label=PRES_4
 PA8.Locked=true
 PA8.Signal=GPIO_Output
 PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=PRES_2
+PA9.GPIO_Label=PRES_3
 PA9.Locked=true
 PA9.Signal=GPIO_Output
 PB0.GPIOParameters=GPIO_Label
