Gestion hardware des pompes, ev, led et vacuostat

--- a/vacuum-pumps.ioc
+++ b/vacuum-pumps.ioc
@@ -6,8 +6,9 @@ ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=heartBeatTask,24,128,StartHeartBeatTask,Default,NULL,Dynamic,NULL,NULL;readPumpTask,8,256,StartReadPumpTask,Default,NULL,Dynamic,NULL,NULL;writePumpTask,8,128,StartWritePumpTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,FootprintOK,Timers01
+FREERTOS.Tasks01=refreshStateTas,24,256,StartRefreshStateTask,Default,NULL,Dynamic,NULL,NULL;managePumpTask,8,128,StartManagePumpTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Timers01=heartBeatTimer,heartBeatCallback,osTimerPeriodic,Default,NULL,Dynamic,NULL;ledIhmTimer,ledIhmCallback,osTimerPeriodic,Default,NULL,Dynamic,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=OwnAddress
