Passage en I2C `Fast Mode`

--- a/vacuum-pumps.ioc
+++ b/vacuum-pumps.ioc
@@ -11,7 +11,9 @@ FREERTOS.Tasks01=refreshStateTas,24,256,StartRefreshStateTask,Default,NULL,Dynam
 FREERTOS.Timers01=heartBeatTimer,heartBeatCallback,osTimerPeriodic,Default,NULL,Dynamic,NULL;ledIhmTimer,ledIhmCallback,osTimerPeriodic,Default,NULL,Dynamic,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C1.IPParameters=OwnAddress
+I2C1.DutyCycle=I2C_DUTYCYCLE_16_9
+I2C1.I2C_Mode=I2C_Fast
+I2C1.IPParameters=OwnAddress,I2C_Mode,DutyCycle
 I2C1.IPParametersWithoutCheck=OwnAddress
 I2C1.OwnAddress=i2cSlaveAddress
 KeepUserPlacement=false
