--- a/vacuum-pumps.ioc
+++ b/vacuum-pumps.ioc
@@ -27,9 +27,10 @@ Dma.Request0=I2C1_RX
 Dma.Request1=I2C1_TX
 Dma.RequestsNb=2
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK,Timers01
+FREERTOS.IPParameters=Tasks01,FootprintOK,Timers01,configTIMER_TASK_PRIORITY
 FREERTOS.Tasks01=refreshStateTas,24,256,StartRefreshStateTask,Default,NULL,Dynamic,NULL,NULL;managePumpTask,8,128,StartManagePumpTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.Timers01=heartBeatTimer,heartBeatCallback,osTimerPeriodic,Default,NULL,Dynamic,NULL;ledIhmTimer,ledIhmCallback,osTimerPeriodic,Default,NULL,Dynamic,NULL
+FREERTOS.configTIMER_TASK_PRIORITY=8
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.DutyCycle=I2C_DUTYCYCLE_16_9
@@ -98,8 +99,8 @@ NVIC.DMA1_Channel7_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.I2C1_ER_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.I2C1_EV_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
