--- a/vacuum-pumps.ioc
+++ b/vacuum-pumps.ioc
@@ -28,7 +28,7 @@ Dma.Request1=I2C1_TX
 Dma.RequestsNb=2
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,Timers01,configTIMER_TASK_PRIORITY
-FREERTOS.Tasks01=refreshStateTas,24,256,StartRefreshStateTask,Default,NULL,Dynamic,NULL,NULL;managePumpTask,8,128,StartManagePumpTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=refreshStateTas,24,256,StartRefreshStateTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.Timers01=heartBeatTimer,heartBeatCallback,osTimerPeriodic,Default,NULL,Dynamic,NULL;ledIhmTimer,ledIhmCallback,osTimerPeriodic,Default,NULL,Dynamic,NULL
 FREERTOS.configTIMER_TASK_PRIORITY=8
 File.Version=6
@@ -94,13 +94,13 @@ Mcu.UserName=STM32F103C8Tx
 MxCube.Version=6.2.1
 MxDb.Version=DB.6.0.21
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Channel6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
-NVIC.DMA1_Channel7_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
+NVIC.DMA1_Channel6_IRQn=true\:0\:0\:true\:false\:true\:false\:false\:true
+NVIC.DMA1_Channel7_IRQn=true\:0\:0\:true\:false\:true\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.I2C1_ER_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:true
+NVIC.I2C1_EV_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
