--- a/vacuum-pumps.ioc
+++ b/vacuum-pumps.ioc
@@ -28,7 +28,7 @@ Dma.Request1=I2C1_TX
 Dma.RequestsNb=2
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,Timers01,configTIMER_TASK_PRIORITY
-FREERTOS.Tasks01=refreshStateTas,24,256,StartRefreshStateTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=mainTask,24,256,StartMainTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.Timers01=heartBeatTimer,heartBeatCallback,osTimerPeriodic,Default,NULL,Dynamic,NULL;ledIhmTimer,ledIhmCallback,osTimerPeriodic,Default,NULL,Dynamic,NULL
 FREERTOS.configTIMER_TASK_PRIORITY=8
 File.Version=6
