--- a/vacuum-pumps.ioc
+++ b/vacuum-pumps.ioc
@@ -39,6 +39,7 @@ I2C1.IPParameters=OwnAddress,I2C_Mode,DutyCycle
 I2C1.IPParametersWithoutCheck=OwnAddress
 I2C1.OwnAddress=i2cSlaveAddress
 KeepUserPlacement=false
+Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
 Mcu.IP0=ADC1
 Mcu.IP1=DMA
@@ -91,29 +92,29 @@ Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=I2C_SLAVE_ADDRESS_BASE,0x26
 Mcu.UserName=STM32F103C8Tx
-MxCube.Version=6.2.1
-MxDb.Version=DB.6.0.21
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Channel6_IRQn=true\:0\:0\:true\:false\:true\:false\:false\:true
-NVIC.DMA1_Channel7_IRQn=true\:0\:0\:true\:false\:true\:false\:false\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+MxCube.Version=6.5.0
+MxDb.Version=DB.6.0.50
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
+NVIC.DMA1_Channel6_IRQn=true\:0\:0\:true\:false\:true\:false\:false\:true\:true
+NVIC.DMA1_Channel7_IRQn=true\:0\:0\:true\:false\:true\:false\:false\:true\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.I2C1_ER_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:true
-NVIC.I2C1_EV_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:true
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
+NVIC.I2C1_ER_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:true\:true
+NVIC.I2C1_EV_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:true\:true
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:true
 NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
-NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:true
+NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM1_UP_IRQn
 NVIC.TimeBaseIP=TIM1
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=VAC_1
 PA0-WKUP.Locked=true
@@ -216,8 +217,12 @@ PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=I2C_ADD_1
 PB5.Locked=true
 PB5.Signal=GPIO_Input
+PB6.GPIOParameters=GPIO_Pu
+PB6.GPIO_Pu=GPIO_PULLUP
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
+PB7.GPIOParameters=GPIO_Pu
+PB7.GPIO_Pu=GPIO_PULLUP
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
 PB8.GPIOParameters=GPIO_Label
