--- a/vacuum-pumps.ioc
+++ b/vacuum-pumps.ioc
@@ -35,8 +35,9 @@ File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.DutyCycle=I2C_DUTYCYCLE_16_9
 I2C1.I2C_Mode=I2C_Fast
-I2C1.IPParameters=OwnAddress,I2C_Mode,DutyCycle
+I2C1.IPParameters=OwnAddress,I2C_Mode,DutyCycle,NoStretchMode
 I2C1.IPParametersWithoutCheck=OwnAddress
+I2C1.NoStretchMode=I2C_NOSTRETCH_ENABLE
 I2C1.OwnAddress=i2cSlaveAddress
 KeepUserPlacement=false
 Mcu.CPN=STM32F103C8T6
