--- a/vacuum-pumps.ioc
+++ b/vacuum-pumps.ioc
@@ -27,10 +27,11 @@ Dma.Request0=I2C1_RX
 Dma.Request1=I2C1_TX
 Dma.RequestsNb=2
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK,Timers01,configTIMER_TASK_PRIORITY
+FREERTOS.IPParameters=Tasks01,FootprintOK,Timers01,configTIMER_TASK_PRIORITY,configUSE_NEWLIB_REENTRANT
 FREERTOS.Tasks01=mainTask,24,256,StartMainTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.Timers01=heartBeatTimer,heartBeatCallback,osTimerPeriodic,Default,NULL,Dynamic,NULL;ledIhmTimer,ledIhmCallback,osTimerPeriodic,Default,NULL,Dynamic,NULL
 FREERTOS.configTIMER_TASK_PRIORITY=8
+FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.DutyCycle=I2C_DUTYCYCLE_16_9
