--- a/vacuum-pumps.ioc
+++ b/vacuum-pumps.ioc
@@ -96,8 +96,8 @@ Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=I2C_SLAVE_ADDRESS_BASE,0x26
 Mcu.UserName=STM32F103C8Tx
-MxCube.Version=6.9.0
-MxDb.Version=DB.6.0.90
+MxCube.Version=6.14.1
+MxDb.Version=DB.6.0.141
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA1_Channel6_IRQn=true\:0\:0\:true\:false\:true\:false\:false\:true\:true
 NVIC.DMA1_Channel7_IRQn=true\:0\:0\:true\:false\:true\:false\:false\:true\:true
@@ -252,6 +252,7 @@ PD1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
+ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
@@ -259,7 +260,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F103C8Tx
-ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.5
+ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.6
 ProjectManager.FreePins=true
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
